# NAG---The-brogrammer

./: .replit  Ai.py  Destruction.py  Display.py  Main.py  README.md  Up.py  User.txt  execute.py  main.py  pyproject.toml  syntax.py
Ai/: Ai.py  execute.py  main.py  output.py
Ai/templates/: index.css  index.html
Csv/: Destruction.py  Display.py  Up.py  syntax.py
templates/: index.html  login.html  register.html
