[tool.poetry]
name = "repl-nix-nag-the-brogramming-language"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_nag_the_brogramming_language"}]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
